--- a/Shopping.Application/Shopping.Application.csproj
+++ b/Shopping.Application/Shopping.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Shopping.Domain\Shopping.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
