--- a/Shopping.WebUI/Shopping.WebUI.csproj
+++ b/Shopping.WebUI/Shopping.WebUI.csproj
@@ -6,4 +6,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Shopping.Application\Shopping.Application.csproj" />
+      <ProjectReference Include="..\Shopping.Domain\Shopping.Domain.csproj" />
+      <ProjectReference Include="..\Shopping.Infrastructure\Shopping.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
