--- a/Shopping.Infrastructure/Shopping.Infrastructure.csproj
+++ b/Shopping.Infrastructure/Shopping.Infrastructure.csproj
@@ -11,4 +11,9 @@
       <ProjectReference Include="..\Shopping.Domain\Shopping.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
+    </ItemGroup>
+
 </Project>
