--- a/Shopping.Application/Shopping.Application.csproj
+++ b/Shopping.Application/Shopping.Application.csproj
@@ -23,4 +23,10 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Dtos\" />
+      <Folder Include="Interfaces\" />
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
