add service for item, add item dto, changes in UnitOfWork.cs

--- a/Shopping.WebUI/Shopping.WebUI.csproj
+++ b/Shopping.WebUI/Shopping.WebUI.csproj
@@ -25,4 +25,8 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Item\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
