add registration and login

--- a/Shopping.WebUI/appsettings.json
+++ b/Shopping.WebUI/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=Shopping.db"
+    "DefaultConnection": "DataSource=Shopping.db",
+    "ApplicationContextConnection": "Data Source=Shopping.WebUI.db"
   },
   "AllowedHosts": "*"
 }
